2010-12-17  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-10-04
	* bugfixes regarding find()

2010-11-10  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-10-03
	* support ak7jpt et al

	* tag V00-10-02
	* support ak5jptl1 and ak5jptl1l2l3

2010-10-21  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-10-01
	* transition to 38X, not quite completed yet
	* on top of CMSSW_3_8_5, the following tags are required:
	  V00-08-01 JetMETAnalysis/JetUtilities
	  V03-01-02 CondFormats/JetMETObjects
	  V02-01-01 JetMETCorrections/Algorithms
	  V03-01-01 JetMETCorrections/Configuration
	  V05-00-01 JetMETCorrections/Modules
	* JetCorrection_cff.py: switch off CondDB until available
	* jet_apply_jec_x: 'levels' parameter must be explicitely provided
	* jet_l2_correction_x/jet_l3correction_x: adapt to change in text
	file format
	


2010-05-28  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-09-02
	* add config/jra_dr_finebinning.config, provided by Ricardo.
	* remove config/fine_binning.config

2010-05-03  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-09-01
	* fix jet_apply_jec_x tool, example:
	  jet_apply_jec_x -input JRAt.root -era Spring10 -output JRAt_jec.root

2010-04-30  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-09-00
	* runs with CMSSW_3_6_0 (on 35X files)
	* eliminate (mostly) references to sisCone
	* repair JPT reconstruction which has changed significantly
	(configuration-wise) in 36X

2010-04-26  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-08-09
	* pick up fix by Andreas (see below)

2010-04-20  Andreas Hinzmann  <hinzmann@cern.ch>

	* fix in jet_l3_correction_x

2010-04-19  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-08-08
	* improvements to jet_l2_correction_x and jet_l3_correction_x
	tools

2010-04-12  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-08-07